    libxml-parser-perl.

  [ Evan Dandrea ]
  * Accurately place and calculate the total size of the new partitions
    (LP: #271512).
  * Calculate the allocation for the labels after adding a new segment in
    segmented_bar (LP: #271554).
  * Do not remove the files for packages that will break other packages when
    removed (LP: #276657).

  [ Emmet Hikory ]
  * Build partman-efi udebs for amd64 and lpia
  * Build grub-installer udeb for lpia (LP: #277225)

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 01 Oct 2008 15:45:24 -0400

ubiquity (1.10.3) intrepid; urgency=low

  * Back out DVD performance fixes for beta; they cause files from some
    packages that actually are installed (language packs) to be missing from
    the installed system. Works around LP #276657, but this needs a better
    fix for Ubuntu 8.10.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Oct 2008 17:56:59 +0100

ubiquity (1.10.2) intrepid; urgency=low

  * Initialise auto-login checkbox from debconf database (LP: #276247).
  * Add some more grub pieces on lpia.
  * Add ntfsprogs dependency on lpia.
  * Automatic update of included source packages: partman-partitioning
    59ubuntu7.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 30 Sep 2008 18:47:01 +0100

ubiquity (1.10.1) intrepid; urgency=low

  * Revert part of intltool 0.40.4 change (described in bug 275795) that
    caused top_builddir not to be set in po/Makefile.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 29 Sep 2008 12:47:52 +0100

ubiquity (1.10.0) intrepid; urgency=low

  [ Evan Dandrea ]
  * Use a normal color for the partition bar when use entire disk is
    selected (LP: #273271).
  * Automatic update of included source packages: debian-installer-utils
    1.59ubuntu3, grub-installer 1.32ubuntu6, hw-detect 1.63ubuntu3,
    user-setup 1.20ubuntu7.

  [ Colin Watson ]
  * Don't mark partman questions as seen when we expect them to be asked
    again (LP: #182004).
  * Set GtkAdjustment page_size to zero in Glade files too.
