@@ -18,6 +18,8 @@ ubiquity (1.10.4) UNRELEASED; urgency=low
     segmented_bar (LP: #271554).
   * Do not remove the files for packages that will break other packages when
     removed (LP: #276657).
+  * Fix a crash in the noninteractive frontend due to missing auto_login
+    functions.
 
   [ Emmet Hikory ]
   * Build partman-efi udebs for amd64 and lpia
